button fix on mobile

--- a/assets/css/pages/home.scss
+++ b/assets/css/pages/home.scss
@@ -119,8 +119,8 @@
 
 	.button {
 		@media (max-width: $break-small) {
-			text-shadow: 0px 0px 5px #000000;
-			background: #0082c9cc;
+/* 			text-shadow: 0px 0px 5px #000000; */
+/* 			background: #0082c9cc; */
 		}
 	}
 
